# api_final_yatube

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
yatube_api/: db.sqlite3_old  requirements.txt
yatube_api/api/: permissions.py  serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/posts/migrations/: 0002_auto_20231018_1712.py  0003_auto_20231020_1741.py  0004_alter_post_options.py  0005_alter_comment_options.py  0006_auto_20231021_1830.py  0007_auto_20231022_1043.py  0008_alter_follow_following.py  0009_alter_follow_user.py
yatube_api/yatube_api/: settings.py
